# 2025_final_github

./: .cursorrules  .gitignore  2025_keywords.md  BUILD-DEPLOY.md  ENVIRONMENT-SETUP.md  PLAN.md  README.md  SECURITY-CHECKLIST.md  db_structure.md  frontend-unlinked-features.md  package-lock.json  package.json  temp_schema_update.py  test_api.py  tsconfig.json  vite.renderer.config.ts  web_backend_2025_trends.md  web_frontend_2025_trends.md
backend/: .gitignore  API_DOCUMENTATION.md  README.md  README_SETUP.md  check_db.py  debug_api.py  debug_endpoint.py  drop_follow_constraints.py  env.dev.example  env.local  env.local.example  env.production.example  fix_follow_table.py  generate_secret_key.py  init_db.py  pyproject.toml  requirements.txt  reset_db.py  run.py
backend/app/: __init__.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  audit_logs.py  auth.py  board_extra.py  boards.py  dashboard.py  files.py  health.py  inquiries.py  language_configs.py  (+9 more)
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  board.py  file.py  inquiry.py  language_config.py  locale.py  oauth_account.py  permission.py  refresh_token.py  role.py  role_permission.py  user.py  user_role.py
backend/app/schemas/: __init__.py  audit_log.py  auth.py  board.py  dashboard.py  file.py  inquiry.py  language_config.py  locale.py  logs.py  oauth_account.py  permission.py  refresh_token.py  role.py  role_permission.py  user.py  user_role.py
(+254 files in other folders)
